tests/golden/compile-pass/result_ok_err.rua
fn success() -> Result<i64, String> {
    Ok(5)
}

fn failure() -> Result<i64, String> {
    Err("failed")
}
