tests/golden/compile-fail/result_err_wrong_arity.rua
fn value() -> Result<i64, String> {
    Err()
}
